CMAKE_MINIMUM_REQUIRED(VERSION 3.7)

PROJECT(ige)

SET(CMAKE_CXX_STANDARD 14)
SET(CMAKE_BUILD_TYPE DEBUG)

FIND_PACKAGE(SDL2 REQUIRED)

INCLUDE_DIRECTORIES(ige include ~/Program-Arguments ${SDL2_INCLUDE_DIRS})

SET(SOURCE_FILES ./main.cpp ./Address.cpp)

ADD_EXECUTABLE(ige ${SOURCE_FILES})
TARGET_LINK_LIBRARIES(ige ${SDL2_LIBRARIES})
